# QTPCL

./: CMakeLists.txt  QTPCL.pro  main.cpp  qrc.qrc  viewer.cpp  viewer.h  viewer.ui
